# gomoku

./: .gitignore  CMakeLists.txt  Makefile
include/: action.hpp  board.hpp  flag.hpp  game.hpp  index.hpp  minimax.hpp  sequence.hpp
src/: action.cpp  board.cpp  flag.cpp  game.cpp  index.cpp  main.cpp  minimax.cpp  sequence.cpp
